added new files

--- a/spacy_pipelines.ipynb
+++ b/spacy_pipelines.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[]\n",
       "Captain\n",
       "america\n",
       "ate\n",
@@ -50,7 +51,7 @@
     "nlp = spacy.blank(\"en\")\n",
     "\n",
     "doc = nlp(\"Captain america ate 100$ of samosa. Then he said I can do this all day.\")\n",
-    "\n",
+    "print(nlp.pipeline)\n",
     "for token in doc:\n",
     "    print(token)"
    ]
@@ -222,7 +223,7 @@
     "doc = nlp(\"Captain america ate 100$ of samosa. Then he said I can do this all day.\")\n",
     "\n",
     "for token in doc:\n",
-    "    print(token, \" | \", spacy.explain(token.pos_), \" | \", token.lemma_)"
+    "    print(token,\" | \", \" | \", spacy.explain(token.pos_), \" | \", token.lemma_)"
    ]
   },
   {
@@ -400,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +410,7 @@
        "['ner']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,12 +420,12 @@
     "\n",
     "nlp = spacy.blank(\"en\")\n",
     "nlp.add_pipe(\"ner\", source=source_nlp)\n",
-    "nlp.pipe_names"
+    "nlp.pipe_names\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
