JUST SOME CHANGES

--- a/2.7pos_exercise_solution.ipynb
+++ b/2.7pos_exercise_solution.ipynb
@@ -11,6 +11,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy \n",
+    "nlp=spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "282\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"news_story.txt\",\"r\") as f:\n",
+    "    news_text = f.read()\n",
+    "\n",
+    "print(len(news_text.split(\" \")))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -19,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -30,7 +60,7 @@
        "289"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,6 +76,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc =nlp(news_text)\n",
+    "num=[]\n",
+    "noun=[]\n",
+    "\n",
+    "for token in doc:\n",
+    "    if(token.pos_ == \"NOUN\"):\n",
+    "        noun.append(token)\n",
+    "    elif(token.pos_==\"NUM\"):\n",
+    "        num.append(token)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -83,7 +130,7 @@
        "[8.3, 8.1, 1982, 6.2, 6, â€, 0.3, 0.2, 0.6, 0.4]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -114,13 +161,22 @@
        " prices]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "noun_tokens[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count =doc.count_by(spacy.attrs.POS)"
    ]
   },
   {
@@ -132,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +212,7 @@
        " 101: 1}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
