--- a/task.ipynb
+++ b/task.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,12 +65,109 @@
     "# Download NLTK resources (if not already downloaded)\n",
     "import nltk\n",
     "nltk.download('punkt')\n",
-    "nltk.download('stopwords')\n"
+    "nltk.download('stopwords')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', \"she's\", 'her', 'hers', 'herself', 'it', \"it's\", 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', \"that'll\", 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', \"don't\", 'should', \"should've\", 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', \"aren't\", 'couldn', \"couldn't\", 'didn', \"didn't\", 'doesn', \"doesn't\", 'hadn', \"hadn't\", 'hasn', \"hasn't\", 'haven', \"haven't\", 'isn', \"isn't\", 'ma', 'mightn', \"mightn't\", 'mustn', \"mustn't\", 'needn', \"needn't\", 'shan', \"shan't\", 'shouldn', \"shouldn't\", 'wasn', \"wasn't\", 'weren', \"weren't\", 'won', \"won't\", 'wouldn', \"wouldn't\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Natural Language Processing is an exciting field.', 'Preprocessing techniques are crucial for NLP tasks.', 'One Hot Encoding is a binary representation method.', 'Bag of Words is a common technique in NLP.', 'Bag of N-grams captures local word patterns.', 'TF-IDF considers term frequency and inverse document frequency.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natural Language Processing is an exciting field.\n",
+      "Preprocessing techniques are crucial for NLP tasks.\n",
+      "One Hot Encoding is a binary representation method.\n",
+      "Bag of Words is a common technique in NLP.\n",
+      "Bag of N-grams captures local word patterns.\n",
+      "TF-IDF considers term frequency and inverse document frequency.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sentence in corpus:\n",
+    "    print(sentence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['natural', 'language', 'processing', 'is', 'an', 'exciting', 'field']\n",
+      "natural language processing exciting field\n",
+      "['preprocessing', 'techniques', 'are', 'crucial', 'for', 'nlp', 'tasks']\n",
+      "preprocessing techniques crucial nlp tasks\n",
+      "['one', 'hot', 'encoding', 'is', 'a', 'binary', 'representation', 'method']\n",
+      "one hot encoding binary representation method\n",
+      "['bag', 'of', 'words', 'is', 'a', 'common', 'technique', 'in', 'nlp']\n",
+      "bag words common technique nlp\n",
+      "['bag', 'of', 'ngrams', 'captures', 'local', 'word', 'patterns']\n",
+      "bag ngrams captures local word patterns\n",
+      "['tfidf', 'considers', 'term', 'frequency', 'and', 'inverse', 'document', 'frequency']\n",
+      "tfidf considers term frequency inverse document frequency\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sentence in corpus:\n",
+    "    # Convert to lowercase\n",
+    "    sentence = sentence.lower()\n",
+    "    \n",
+    "    # Remove special characters and numbers\n",
+    "    sentence = re.sub(r'[^a-z\\s]', '', sentence)\n",
+    "    # print(sentence)\n",
+    "    words = word_tokenize(sentence)\n",
+    "    print(words)\n",
+    "    words=remove_stopwords(sentence)\n",
+    "    print(words)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -151,11 +248,23 @@
      "output_type": "stream",
      "text": [
       "['natural', 'language', 'processing', 'exciting', 'field']\n",
+      "['natur', 'languag', 'process', 'excit', 'field']\n",
+      "natur languag process excit field\n",
       "['preprocessing', 'techniques', 'crucial', 'nlp', 'tasks']\n",
+      "['preprocess', 'techniqu', 'crucial', 'nlp', 'task']\n",
+      "preprocess techniqu crucial nlp task\n",
       "['one', 'hot', 'encoding', 'binary', 'representation', 'method']\n",
+      "['one', 'hot', 'encod', 'binari', 'represent', 'method']\n",
+      "one hot encod binari represent method\n",
       "['bag', 'words', 'common', 'technique', 'nlp']\n",
+      "['bag', 'word', 'common', 'techniqu', 'nlp']\n",
+      "bag word common techniqu nlp\n",
       "['bag', 'ngrams', 'captures', 'local', 'word', 'patterns']\n",
+      "['bag', 'ngram', 'captur', 'local', 'word', 'pattern']\n",
+      "bag ngram captur local word pattern\n",
       "['tfidf', 'considers', 'term', 'frequency', 'inverse', 'document', 'frequency']\n",
+      "['tfidf', 'consid', 'term', 'frequenc', 'invers', 'document', 'frequenc']\n",
+      "tfidf consid term frequenc invers document frequenc\n",
       "['natur languag process excit field', 'preprocess techniqu crucial nlp task', 'one hot encod binari represent method', 'bag word common techniqu nlp', 'bag ngram captur local word pattern', 'tfidf consid term frequenc invers document frequenc']\n"
      ]
     }
@@ -191,15 +300,22 @@
     "    # Stemming\n",
     "    stemmer = PorterStemmer()\n",
     "    words = [stemmer.stem(word) for word in words]\n",
-    "    \n",
-    "    processed_corpus.append(' '.join(words))\n",
+    "    print(words)\n",
+    "    # processed_corpus.append(' '.join(words))\n",
+    "\n",
+    "    joined_string = ' '.join(words)\n",
+    "    print(joined_string)\n",
+    "\n",
+    "# Step 2: Append the joined string to the 'processed_corpus' list\n",
+    "    processed_corpus.append(joined_string)\n",
+    "\n",
     "\n",
     "print(processed_corpus)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -261,20 +377,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['natur languag process excit field', 'preprocess techniqu crucial nlp task', 'one hot encod binari represent method', 'bag word common techniqu nlp', 'bag ngram captur local word pattern', 'tfidf consid term frequenc invers document frequenc']\n",
+      "['natur', 'languag', 'process', 'excit', 'field', 'preprocess', 'techniqu', 'crucial', 'nlp', 'task', 'one', 'hot', 'encod', 'binari', 'represent', 'method', 'bag', 'word', 'common', 'techniqu', 'nlp', 'bag', 'ngram', 'captur', 'local', 'word', 'pattern', 'tfidf', 'consid', 'term', 'frequenc', 'invers', 'document', 'frequenc']\n",
       "Total Words: 34\n",
       "Vocabulary Size: 29\n"
      ]
     }
    ],
    "source": [
+    "print(processed_corpus)\n",
     "flat_list = [word for sentence in processed_corpus for word in sentence.split()]\n",
+    "print(flat_list)\n",
     "total_words = len(flat_list)\n",
     "unique_words = set(flat_list)\n",
     "vocab_size = len(unique_words)\n",
@@ -285,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +467,41 @@
       " [0 1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 1 0 0 0 1 0 0 0 0 0 0 0]\n",
       " [1 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 1]\n",
       " [1 0 1 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 1 0]\n",
-      " [0 0 0 0 1 0 1 0 0 0 2 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0]]\n"
+      " [0 0 0 0 1 0 1 0 0 0 2 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0]]\n",
+      "  (0, 18)\t1\n",
+      "  (0, 15)\t1\n",
+      "  (0, 23)\t1\n",
+      "  (0, 8)\t1\n",
+      "  (0, 9)\t1\n",
+      "  (1, 22)\t1\n",
+      "  (1, 27)\t1\n",
+      "  (1, 5)\t1\n",
+      "  (1, 19)\t1\n",
+      "  (1, 25)\t1\n",
+      "  (2, 20)\t1\n",
+      "  (2, 12)\t1\n",
+      "  (2, 7)\t1\n",
+      "  (2, 1)\t1\n",
+      "  (2, 24)\t1\n",
+      "  (2, 17)\t1\n",
+      "  (3, 19)\t1\n",
+      "  (3, 0)\t1\n",
+      "  (3, 31)\t1\n",
+      "  (3, 3)\t1\n",
+      "  (3, 26)\t1\n",
+      "  (4, 0)\t1\n",
+      "  (4, 11)\t1\n",
+      "  (4, 2)\t1\n",
+      "  (4, 16)\t1\n",
+      "  (4, 30)\t1\n",
+      "  (4, 21)\t1\n",
+      "  (5, 29)\t1\n",
+      "  (5, 13)\t1\n",
+      "  (5, 4)\t1\n",
+      "  (5, 28)\t1\n",
+      "  (5, 10)\t2\n",
+      "  (5, 14)\t1\n",
+      "  (5, 6)\t1\n"
      ]
     }
    ],
@@ -371,12 +525,13 @@
     "print(\"Vocabulary:\")\n",
     "print(vectorizer.get_feature_names_out())\n",
     "print(\"Word Occurrences:\")\n",
-    "print(bag_of_words.toarray())\n"
+    "print(bag_of_words.toarray())\n",
+    "print(bag_of_words)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
